fixed stretch bg in differenty-by-design

--- a/scss/_corevalues.scss
+++ b/scss/_corevalues.scss
@@ -107,7 +107,7 @@ section#coreValues {
       }
       .particles-container {
         width: 100vw;
-        max-width: 100%;
+        max-width: 100vw;
         height: 100%;
       }
       .panel-tint {
